--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ include_directories(include)
 
 
 
-add_executable(${PROJECT_NAME} src/main.cpp src/cpu.cpp src/memory.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/cpu.cpp src/memory.cpp src/system.cpp)
 target_link_libraries(${PROJECT_NAME} -pthread)
