Added test suite skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ include_directories(include)
 
 add_executable(${PROJECT_NAME} src/main.cpp src/cpu.cpp src/memory.cpp src/system.cpp)
 target_link_libraries(${PROJECT_NAME} -pthread -O3)
+
+add_executable(${PROJECT_NAME}_tests src/tests.cpp src/cpu.cpp src/memory.cpp src/system.cpp)
+target_link_libraries(${PROJECT_NAME}_tests -pthread -O3)
