Started doxygen comments and added doxyfile

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,5 @@ emu.dir/Debug/emu.tlog/link.command.1.tlog
 emu.dir/Debug/emu.tlog/link.read.1.tlog
 emu.dir/Debug/emu.tlog/link.write.1.tlog
 test/6502_functional_test.bin
-
+latex/*
+html/*
