--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ include_directories(include)
 
 add_executable(${PROJECT_NAME} src/main.cpp src/cpu.cpp src/memory.cpp src/system.cpp)
 target_link_libraries(${PROJECT_NAME} -pthread -O3)
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wconversion)
