Reviving project, no functional changes, renamed some things, ran autoformatter, added todo list to README

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,2 @@
 .vscode/
-build/*
-CMakeFiles/
-CMakeCache.txt
-Makefile
-cmake_install.cmake
-ALL_BUILD.vcxproj
-ALL_BUILD.vcxproj.filters
-emu.sln
-emu.vcxproj
-emu.vcxproj.filters
-ZERO_CHECK.vcxproj
-ZERO_CHECK.vcxproj.filters
-x64/Debug/ALL_BUILD/ALL_BUILD.recipe
-x64/Debug/ALL_BUILD/ALL_BUILD.tlog/ALL_BUILD.lastbuildstate
-x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.command.1.tlog
-x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.read.1.tlog
-x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.write.1.tlog
-x64/Debug/ZERO_CHECK/ZERO_CHECK.recipe
-x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.command.1.tlog
-x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog
-x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
-x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
-emu.dir/Debug/cpu.obj
-emu.dir/Debug/emu.exe.recipe
-emu.dir/Debug/emu.ilk
-emu.dir/Debug/main.obj
-emu.dir/Debug/memory.obj
-emu.dir/Debug/system.obj
-emu.dir/Debug/vc142.pdb
-emu.dir/Debug/emu.tlog/CL.command.1.tlog
-emu.dir/Debug/emu.tlog/CL.read.1.tlog
-emu.dir/Debug/emu.tlog/CL.write.1.tlog
-emu.dir/Debug/emu.tlog/CustomBuild.command.1.tlog
-emu.dir/Debug/emu.tlog/CustomBuild.read.1.tlog
-emu.dir/Debug/emu.tlog/CustomBuild.write.1.tlog
-emu.dir/Debug/emu.tlog/emu.lastbuildstate
-emu.dir/Debug/emu.tlog/link.command.1.tlog
-emu.dir/Debug/emu.tlog/link.read.1.tlog
-emu.dir/Debug/emu.tlog/link.write.1.tlog
-test/6502_functional_test.bin
-latex/*
-html/*
-log.txt
+build/
